# tree-sitter-kitty-conf

./: Cargo.toml  README.md  binding.gyp  grammar.js  map_test.txt  package.json  pnpm-lock.yaml  prettier.config.js
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: active_border_color.txt  bell_border_color.txt  bell_on_tab.txt  bell_path.txt  bold_font.txt  bold_italic_font.txt  box_drawing_scale.txt  clear_all_mouse_actions.txt  click_interval.txt  color0_to_color255.txt  command_on_bell.txt  comment.txt  confirm_os_window_close.txt  copy_on_select.txt  cursor.txt  cursor_beam_thickness.txt  cursor_blink_interval.txt  cursor_shape.txt  cursor_stop_blinking_after.txt  cursor_text_color.txt  cursor_underline_thickness.txt  default_pointer_shape.txt  detect_urls.txt  disable_ligatures.txt  draw_minimal_borders.txt  enable_audio_bell.txt  enabled_layouts.txt  envinclude.txt  font_family.txt  font_features.txt  font_size.txt  force_ltr.txt  globinclude.txt  hide_window_decorations.txt  inactive_border_color.txt  inactive_text_alpha.txt  include.txt  initial_window_height.txt  initial_window_width.txt  input_delay.txt  (+48 more)
sample_configs/: sample-kitty.conf
scripts/: new_test.js
src/: grammar.json  node-types.json  parser.c
