[package]
name = "tree-sitter-kittyconf"
description = "kittyconf grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "kittyconf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/clo4/tree-sitter-kitty-conf"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
